# tapi_network_schema

./: .gitignore  Cargo.toml  Makefile  README.md  compose.yml  docker-compose.dev.yml  docker-compose.yml
actix_api/: 192174.json  Cargo.toml  Dockerfile  example.json  new_example.json  services_interface_point.json  services_vector.uml  sources_models.uml
actix_api/devices_files/: connections.json  connectivity_services.json  services_interface_point.json  topology.json
actix_api/migrations/: 20250206220245_tapi_uris.down.sql  20250206220245_tapi_uris.up.sql  20250208183714_devices.down.sql  20250208183714_devices.up.sql  20250208184146_restconf_validations.down.sql  20250208184146_restconf_validations.up.sql
actix_api/sienna_files/: connections.json  connectivity_context.json  connectivity_services.json  service_interface_points.json
actix_api/src/: error.rs  lib.rs  main.rs  utils.rs
actix_api/src/handlers/: database.rs  http.rs  mod.rs  requester.rs
actix_api/src/impls/: devices.rs  file_model.rs  mod.rs  tapi_uris.rs  user.rs
actix_api/src/logic/: connection_builder.rs  endpoint_builder.rs  file_handler.rs  link_builder.rs  mod.rs  node_builder.rs  requester.rs  schema_builder.rs  services_builder.rs
actix_api/src/models/: connections.rs  connectivity_services.rs  devices.rs  endpoint.rs  files_model.rs  links.rs  mod.rs  node.rs  nodes.rs  schema.rs  service.rs  tapi_uris.rs  user.rs
actix_api/src/pross/: build_endpoints.rs  conn_services.rs  connections.rs  connectivity_services.rs  data_fill.rs  devices.rs  endpoint.rs  endpoint_vector.rs  error.rs  files_model.rs  inventory_id.rs  links.rs  lower_transform.rs  mod.rs  nodes.rs  requester.rs  schema.rs  token_src.rs
actix_api/src/routes/: add_device.rs  add_host.rs  add_user_schema.rs  by_files.rs  delete_host.rs  fetch.rs  get_hosts.rs  get_schema.rs  get_services.rs  home.rs  mod.rs  services.rs
actix_api/src/tests/: device_model_test.rs  device_test.rs  files_enum_test.rs  mod.rs
actix_api/tests/: device_model_test.rs  files_enum_test.rs  utils_test.rs
actix_api/workflow_uml/: enpoints_creation.uml  lower_transformation.uml
gateway/: Cargo.toml  Dockerfile  build.rs
gateway/config/: config.yaml
gateway/src/: config_hash.rs  error.rs  lib.rs  main.rs  utils.rs
gateway/src/models/: config.rs
gateway/src/routes/: mod.rs  proxy.rs
nginx/: Dockerfile  (+1 more)
yew_front/: Cargo.toml  Dockerfile  index.html  trunk.toml
yew_front/src/: main.rs
yew_front/styles/: add_device.scss  devices.scss  footer_legend.scss  general.scss  header.scss  home.scss  info.scss  loading.scss  login.scss  nodes.scss  services.scss  style.scss  tapi_schema.scss  upload_files.scss
(+31 files in other folders)
