[package]
name = "gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.10.2"
awc = "3.6.0"
clap = { version = "4.5.36", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.27"
reqwest = "0.12.15"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
sha2 = "0.10.8"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }

[build-dependencies]
sha2 = "0.10"

[[bin]]
name = "gateway"
path = "src/main.rs"