[package]
name = "yew_front"
version = "0.1.0"
edition = "2021"

[dependencies]
gloo-net = { version = "0.6.0", features = ["http", "json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
wasm-bindgen-futures = "0.4.42"
yew = { version = "0.21.0", features = ["csr"] }
web-sys = { version = "0.3", features = ["HtmlButtonElement", "HtmlInputElement", "HtmlSelectElement", "HtmlTextAreaElement", "ClipboardEvent", "ClipboardEventInit", "DomRect", "Element"] }
yew-router = "0.18.0"
yew-hooks = "0.3.2"
gloo = "0.11.0"
wasm-bindgen = "0.2.93"
base64 = "0.22.1"
js-sys = "0.3.74"
